--- a/xss/production/test/ms2.html
+++ b/xss/production/test/ms2.html
@@ -43,6 +43,7 @@ function start(resolution)
     {
         $super(
         manager        );
+        this.events = new ms.event.EventHolder(); 
                 var this__ = this;
             this.parent_sequence = null;
                     var ____i1 = new ms.state.Interpolator(
