--- a/xss/production/test/box2d3.html
+++ b/xss/production/test/box2d3.html
@@ -201,7 +201,7 @@ function start(resolution)
 				);
                 if (this.w > 0 && this.h > 0)
                 {
-					this.events.dispatch("ev_resized", [this]);                     
+					this.events.dispatch("resized", [this]);                     
                 }
                 this.RemoveFromWorld = function(keep_visual) 
                 {
@@ -259,12 +259,12 @@ window.onload = function()
 		    __img3 = new ms.ui.Image( 
 	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
                 __img3.rect(0, 350, 10, 40);
-        sp1 = new ms.arcade.Spawner(g_spawner_manager, 300, 100, 1, 3);
-                sp1.x = 300;
+        sp1 = new ms.arcade.Spawner(g_spawner_manager, 100, 100, 1, 1);
+                sp1.x = 100;
                 sp1.y = 100;
-                sp1.set_rotation(90);
+                sp1.set_rotation(95);
                 sp1.frequency = 1;
-                sp1.velocity = 3;
+                sp1.velocity = 1;
         sp1.creator = function()
         {
             return new smiley_ball("images/smile_grin_48.png");
@@ -291,7 +291,7 @@ window.onload = function()
 				);
                 if (__img1.w > 0 && __img1.h > 0)
                 {
-					__img1.events.dispatch("ev_resized", [__img1]);                     
+					__img1.events.dispatch("resized", [__img1]);                     
                 }
                 __img1.RemoveFromWorld = function(keep_visual) 
                 {
@@ -322,7 +322,7 @@ window.onload = function()
 				);
                 if (__img2.w > 0 && __img2.h > 0)
                 {
-					__img2.events.dispatch("ev_resized", [__img2]);                     
+					__img2.events.dispatch("resized", [__img2]);                     
                 }
                 __img2.RemoveFromWorld = function(keep_visual) 
                 {
@@ -353,7 +353,7 @@ window.onload = function()
 				);
                 if (__img3.w > 0 && __img3.h > 0)
                 {
-					__img3.events.dispatch("ev_resized", [__img3]);                     
+					__img3.events.dispatch("resized", [__img3]);                     
                 }
                 __img3.RemoveFromWorld = function(keep_visual) 
                 {
